--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -22,11 +22,26 @@ header {
 }
 
 ul {
-    margin: 0;
+    margin: 0 0 0 130px;
+    overflow: hidden;
     padding: 0;
     list-style-type: none;
 }
 
 ul li {
     float: left;
+    height: 100%;
+    line-height: 55px;
+}
+
+.link {
+    text-decoration: none;
+    outline: none;
+    text-align: center;
+    display: block;
+    color: #444444;
+    font-family: "Microsoft Yahei";
+    font-size: 13px;
+    padding: 0 16px;
+    transition: color 0.15s ease 0s;
 }
