--- a/src/component/Main/Main.css
+++ b/src/component/Main/Main.css
@@ -8,12 +8,14 @@
     width: 660px;
     float: left;
     height: 100%;
+    background-color: #450;
 }
 
 .sidebar {
     width: 280px;
     float: right;
     height: 100%;
+    background-color: #f00;
 }
 
 .clearfix:after {
