--- a/src/component/Content/Content.css
+++ b/src/component/Content/Content.css
@@ -1,7 +1,7 @@
 .main {
     width: 960px;
     margin: 0 auto;
-    /*height: 500px;*/
+    min-height: 480px;
 }
 
 .content {
@@ -14,7 +14,6 @@
     width: 280px;
     float: right;
     height: 100%;
-    /*background-color: #f00;*/
 }
 
 .clearfix:after {
